Error handling of color parsing/solution errors

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-gl-cpp": "^10.4.1",
     "expo-three": "^5.7.0",
     "react": "17.0.1",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.3.1",
     "react-native": "0.64.2",
     "react-native-reanimated": "2.3.0-alpha.3",
